<resources>

    <string name="app_name">Todos</string>
    <!--Resource string Register-->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_firstname">Firstname</string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_newpassword">New Password</string>
    <string name="register_logo">Register ,</string>
    <string name="register_title">Thank you for using</string>
    <string name="register_accept">Accept</string>
    <string name="register_back">Back</string>
    <!--Resource string Tasks-->
    <string name="task_add_item_here"> Add items here</string>
    <string name="task_clear">CLEAR</string>
    <string name="task_completed">COMPLETED</string>
    <string name="task_active">ACTIVE</string>
    <string name="task_all">ALL</string>
    <!--Resource string Login-->
    <string name="login_app_name">Todos</string>
    <string name="login_logo">Welcome back</string>
    <string name="login_title">Sign in to continue</string>
    <string name="login_button_login">Login</string>
    <string name="login_dont_have_accout">Do not have an account ?</string>
    <string name="login_button_register">Register</string>
    <!--Resource string User Information-->
    <string name="info_logo">Profile ,</string>
    <string name="info_title">Your account infomation</string>
    <string name="info_userid">User ID</string>
    <string name="info_back">Back</string>
    <string name="info_change_password">Change password</string>
    <!--Resource string Change Password-->
    <string name="change_password_logo">Change password ,</string>
    <string name="change_password_title">Input your new password</string>
    <string name="change_password_change">Change</string>
    <string name="change_password_old">Old Password</string>
    <string name="change_password_cancel">Cancel</string>
    <!--Nofitication-->
    <string name="user_required">Username is required</string>
    <string name="user_notfound">Username is not found</string>
    <string name="user_notstrong">Username must be greater than 3</string>
    <string name="pass_required">Password is required</string>
    <string name="pass_notstrong">Password is not strong enough</string>
    <string name="pass_notmatch">Password do not match</string>
    <string name="firstlast_required">Firstname or Lastname is required</string>
    <string name="login_faled">Login faled , please try again</string>
    <string name="success_register">Register successful</string>
    <string name="clear_success">Clear successful</string>
    <string name="add_success">Add successful</string>
    <string name="old_pass_required">Old password is not strong</string>
    <string name="old_pass_incorrected">Old password incorrected</string>
    <string name="task_required">Task is required</string>
    <!--Error-->
    <string name="error_connection">Some error occurred , check your network connection</string>
    <string name="error_register">Register failed , please try again</string>
    <string name="error_login">Login failed , please try again</string>
    <string name="error_system">Sorry, Some error occurred</string>

</resources>
