<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.gamma.todoapp.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50pt">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25pt"
            android:layout_marginTop="15pt"
            android:fontFamily="monospace"
            android:text="@string/login_app_name"
            android:textColor="@color/colorTextStandard"
            android:textSize="12pt"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20pt"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25pt"
            android:fontFamily="monospace"
            android:text="@string/login_logo"
            android:textColor="@color/colorTextStandard"
            android:textSize="8pt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25pt"
            android:fontFamily="monospace"
            android:text="@string/login_title"
            android:textColor="@color/colorTextHint"
            android:textSize="8pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="130pt"
        android:layout_height="25pt"
        android:layout_gravity="center"
        android:layout_marginTop="10pt">

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="130pt"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccept"
            android:fontFamily="monospace"
            android:hint="@string/hint_username"
            android:textColor="@color/colorTextStandard"
            android:textColorHint="@color/colorTextHint"
            android:textSize="7pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="130pt"
        android:layout_height="25pt"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccept"
            android:fontFamily="monospace"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/colorTextStandard"
            android:textColorHint="@color/colorTextHint"
            android:textSize="7pt" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layAnimLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txvAnim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25pt"
            android:layout_marginTop="3pt"
            android:fontFamily="monospace"
            android:textColor="@color/colorNofiText"
            android:textSize="6pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35pt">

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="35pt"
            android:layout_height="35pt"
            android:layout_marginLeft="25pt"
            android:fontFamily="monospace"
            android:text="@string/login_button_login"
            android:textColor="@color/colorAccept"
            android:textSize="10pt"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23pt"
            android:layout_marginTop="20pt"
            android:fontFamily="monospace"
            android:text="@string/login_dont_have_accout"
            android:textColor="@color/colorTextHint"
            android:textSize="6pt" />

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:layout_marginTop="20pt"
            android:fontFamily="monospace"
            android:text="@string/login_button_register"
            android:textColor="@color/colorRegister"
            android:textSize="7pt"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
