<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.gamma.todoapp.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50pt">
        <TextView
            android:layout_gravity="center"
            android:layout_marginLeft="20pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12pt"
            android:fontFamily="monospace"
            android:textColor="@color/colorTextStandard"
            android:text="@string/change_password_logo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="20pt"
            android:layout_width="wrap_content"
            android:layout_height="25pt"
            android:textSize="8pt"
            android:textColor="@color/colorTextHint"
            android:fontFamily="monospace"
            android:text="@string/change_password_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10pt"
        android:layout_width="130pt"
        android:layout_height="25pt"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/edtChangeOldPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccept"
            android:fontFamily="monospace"
            android:hint="@string/change_password_old"
            android:inputType="textPassword"
            android:textColor="@color/colorTextStandard"
            android:textColorHint="@color/colorTextHint"
            android:textSize="7pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="130pt"
        android:layout_height="25pt"
        android:layout_gravity="center">
        <EditText
            android:id="@+id/edtChangeNewPassword"
            android:layout_width="130pt"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccept"
            android:fontFamily="monospace"
            android:hint="@string/hint_newpassword"
            android:inputType="textPassword"
            android:textColor="@color/colorTextStandard"
            android:textColorHint="@color/colorTextHint"
            android:textSize="7pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="130pt"
        android:layout_height="25pt"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/edtChangeConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccept"
            android:fontFamily="monospace"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/colorTextStandard"
            android:textColorHint="@color/colorTextHint"
            android:textSize="7pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20pt"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnChangeAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25pt"
            android:fontFamily="monospace"
            android:text="@string/change_password_change"
            android:textColor="@color/colorAccept"
            android:textSize="10pt"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/btnChangeCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40pt"
            android:fontFamily="monospace"
            android:text="@string/change_password_cancel"
            android:textColor="@color/colorAccept"
            android:textSize="10pt"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layAnimChange"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txvChangeNofi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25pt"
            android:layout_marginTop="3pt"
            android:fontFamily="monospace"
            android:textColor="@color/colorNofiText"
            android:textSize="6pt" />
    </LinearLayout>

</LinearLayout>
